syntax = "proto3";
option java_package="cn.migu.selection.proto.base";

message BookContentDescResponse{
	string pluginCode = 1;
    string status = 2;
    string isvisable = 3;
    string messageDesc = 4;
    BookContentDescData data=5; 
}

message BookContentDescData{
    string isShowLine = 1;
    string bookRecommend = 2;
    string bookDesc = 3;
    map<string, string> ctag = 4;
    string  isMarginTop=5;
	string  isMarginBottom=6;
}